--- a/src/org/mozilla/javascript/resources/Messages.properties
+++ b/src/org/mozilla/javascript/resources/Messages.properties
@@ -434,9 +434,6 @@ msg.unterminated.string.lit =\
 msg.oct.esc.too.large =\
     octal escape too large
 
-msg.nested.comment =\
-    nested comment
-
 msg.unterminated.comment =\
     unterminated comment
 
@@ -458,6 +455,9 @@ msg.invalid.escape =\
 # TokensStream warnings
 msg.bad.octal.literal =\
     illegal octal literal digit {0}; interpreting it as a decimal digit
+
+msg.reserved.keyword =\
+    illegal usage of future reserved keyword {0}; interpreting it as ordinary identifier
 
 # Undefined
 msg.undefined =\
